# PyRS

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  16-1_TD.cor_Log.fit.hdf5  HB2B_1017.csv  HB2B_938_van.h5  HB2B_StressStrain_peak0_Summary_33InPlaneStress.csv  Hidra_16-1_cor_log_peak.h5  LICENSE  MANIFEST.in  README.rst  build_joss.sh  codecov.yaml  create_calibration_masks.sh  environment.yml  git-add.sh  launch_pyrs.sh  peaks_com.nxs  pylint.sh  pyproject.toml  pyrs.sh  pyrs_calibration.sh  pyrs_command.sh  pyrs_core_test.sh  pyrs_generatemasks.sh  pyrs_gui_test.sh  pyrs_project_format_test.sh  pyrs_reduce_study.sh  pyrs_widgets_test.sh  pyrsdevel.sh  pyrstest.sh  reduce_HB2B.sh  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  verify_pyrs_reduction.sh
.github/workflows/: ci.yml  ci.yml.bak  conditional.yml  ornl-dev.yml  ornl-prod.yml  package.yaml  unittest.yaml
.gitlab/issue_templates/: defect.md  story.md  task.md
conda.recipe/: environment.yml  meta.yaml  set_environment.py
data/: HB2B_1017_NoMask_Gold.h5  HB2B_1017_NoMask_RM_Gold.h5  HB2B_938_peak.h5  HB2B_CAL_Si333.json  Hidra_16-1_cor_log_peak.h5  XRAY_Definition_20190521_1342.xml  XRay_Definition_1K.txt
designer/: ManualSlicerTable.ui  README.txt  calibrationwindow.ui  eventslicersetupwindow.ui  gridsalignmentview.ui  gridsetupdialog.ui  manualreductionwindow.ui  newsessiondialog.ui  peakfitadvsetting.ui  peakfitplotcontrol.ui  peakfitwindow.ui  pyrsmain.ui  rereductionwindow.ui  sliceexportdialog.ui  sscalvizwindow.ui  strainstressgridsetup.ui  strainstressview.ui  texturecalculationwindow.ui  texturereductionsetupwindow.ui
docs/: README.md  instrument_and_reduction.rst  pole_figure.tex  stress_strain.tex
docs/planning/: HB2B_StressStrain_peak0_Detailed.csv  HB2B_StressStrain_peak0_Summary.csv  PeakInformation.csv  PyRS_UserStory.md  RSE_UserStoryTemplate.md  UserStoryConcepts.md  UserStory_GridInformation_CSVOutputs.md  UserStory_PeakInformation_CSVOutputs.md  stress_strain_ui_1.tif  stress_strain_ui_2.tif  texture_ui.tiff
docs/rtd/: Makefile  environment.yml
docs/source/: project_file.rst
local_prototypes/: merged_pyrs_fit_engine.py  unused_file_loading_methods.py
paper/: paper.bib  paper.md
prototype_scripts/: contour_irregular_grids.py  plot_pole_figure_2.py  plot_rotate.py  scipy_example.py  scipy_interpolate_prototype1.py  slice_view_widget.py  slice_view_widget_test.py  slice_viewer.py  sliceview.ui  sliceviewwidgets.py
prototypes/: Quick_Calibration_v2.py  ReadTiff.py  load_split_subruns_numpy.py  reduce_xray_2k.py  texture_analysis_service.py
prototypes/calibration/: HB2B_Definition_v4.xml  Quick_Calibration_Class.py  Quick_Calibration_Corr.py  Quick_Calibration_Corr_LMFIT.py  Quick_Calibration_Corr_Scipy.py  Quick_Calibration_MultiPosition.py  Quick_Calibration_PeakFit.py  Quick_Calibration_Quasi_HB2B.py  Quick_Calibration_general.py  Quick_Calibration_v2.py  Quick_Calibration_v3.py  XRay_Definition.xml  XRay_Definition_1K.xml  build HB2B.ipynb  build instrument prototype.ipynb  build instrument.ipynb  calibrate_hzb_prototypes.py  calibration_template.py  lv_optimizer.py  mantid_load_data_proto.py  pyrscalibration.py  reduce_hb2b_proto.py  reduce_xray_proto.py
prototypes/mantidtest/: fit_multiple_peaks.py  load_rs_raw.py
prototypes/scripts/: README.md  contour_irregular_grids.py  plot_pole_figure_1.py  plot_pole_figure_2.py  plot_rotate.py  scipy_interpolate_griddata.py  scipy_interpolate_prototype1.py  scipy_interpolation_regular_grids.py  slice_viewer.py  ui_slice_view_widget.ui
prototypes/temp/: convert_hzb_data.py
pyrs/: __init__.py  _version.py  dataobjects.py
pyrs/calibration/: correlation_calibration.py  grid_search_calibration.py  mantid_peakfit_calibration.py  peakfit_calibration.py  pixel_calibration.py  pixel_pos_calibration.py
pyrs/core/: __init__.py  calibration_file_io.py  calibration_manager.py  data_io.py  datamanagers.py  grid_search_calibration.py  hb2b_utilities.py  instrument_geometry.py  live_data_conversion.py  mantid_fit_peak.py  mantid_helper.py  mask_util.py  monosetting.py  nexus_conversion.py  peak_collection.py  peak_fit_engine.py  peak_fit_factory.py  peak_profile_utility.py  peakfitengine.py  polefigurecalculator.py  powder_pattern.py  pyrs_fit_engine.py  pyrscore.py  reduce_hb2b_mtd.py  reduce_hb2b_pyrs.py  reduction_manager.py  reductionengine.py  rshelper.py  rsiocontroller.py  scandataio.py  scipypeakfitengine.py  strain_stress_calculator.py  stress_facade.py  summary_generator.py  summary_generator_stress.py  workspaces.py
pyrs/dataobjects/: __init__.py  constants.py  fields.py  multiscan.py  sample_logs.py
pyrs/icons/: icons.qrc  icons_rc.py  icons_rc4.py  icons_rc5.py
pyrs/interface/: advpeakfitdialog.py  calibrationwindow.py  dialogs.py  fitpeakswindow.py  gui_helper.py  manualreductionwindow.py  pyrs_main.py  slicersetupwindow.py  strainstresscalwindow.py  textureanalysiswindow.py
pyrs/nexus/: split_sub_runs.py
pyrs/peaks/: __init__.py  fit_factory.py  mantid_fit_peak.py  peak_collection.py  peak_fit_engine.py  peak_fit_factory.py  scipypeakfitengine.py
pyrs/projectfile/: __init__.py  constants.py  file_mode.py  file_object.py
pyrs/split_sub_runs/: load_split_sub_runs.py
pyrs/utilities/: __init__.py  calibration_file_io.py  checkdatatypes.py  convertdatatypes.py  file_util.py  file_utilities.py  hb2b_setup.py  hb2b_utilities.py  pydantic_transition.py  rs_project_file.py  rs_scan_io.py  script_helper.py
scripts/: README  convert_hzb_data.py  convert_nexus_to_hidra.py  convert_raw_data.py  create_mask.py  hidra_utility.py  process_mask_roi_files.py  pyrs_calibration.py  pyrs_calibration_correlation.py  pyrs_custom_calibration.py  pyrscalibration.py  pyrsplot  pyrsplot.py  reduce_HB2B.py  reduce_HB2B_prototype.py  reduce_manual_HB2B.py  reduce_xray_data.py
scripts/calibrations/: README.txt  calibrate_hzb_prototypes.py  calibrate_xray_prototype.py  calibration_template.py
tests/: Quick_Calibration_v2.py  conftest.py  helpers.py  plot_sample_points.py  test_conftest.py
(+269 files in other folders)
