[metadata]
name = pyrs
description= Data reduction and visualization of neutron data measured at the HFIR HB2B instrument
author = Chris
uthor_email = fanchercm@ornl.gov
url = http://github.com/neutrons/PyRS
project_urls =
    Bug Tracker = https://github.com/neutrons/PyRS/issues/new
long_description = file: README.rst
license = The MIT License (MIT)
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10

[options]
include_pacage_data = True
python_requires >= 3.10
packages = find:
install_requires =
    configparser
    mantidworkbench
    qtpy
    uncertainties
    vtk
tests_require =
    codecov
    qtpy
    pytest
    pytest-cov
    pytest-qt
    typing
    versioningit

[options.package_data]
* =
   *.ui
   *.png
   *.qrc
   *.json

[bdist]
formats = rpm

[bdist_rpm]
requires = python, numpy, python-matplotlib, PyQt5, mantidworkbench
build_requires = python, python-setuptools, PyQt5, versioningit~=1.1
doc_files = README.rst

[flake8]
exclude = .git,build,docs,prototypes,versioneer.py,pyrs/icons/
max-line-length = 119

[mypy]
ignore_missing_imports = True
namespace_packages = True
